[project]
name = "litestar-01"
version = "0.1.0"
description = "Play project to pick up Litestar"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar[standard]>=2.16.0",
    "sqlalchemy[aiosqlite]>=2.0.41",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pylint>=3.3.7",
]


